--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -8,5 +8,6 @@
             <a href="{{ url_for('add_anime') }}">Add Anime</a>
         {% endif %}
         <a href="{{ url_for('logout') }}">Logout</a>
+        <label>Welcome, {{ user }}</label>
     {% endif %}
 </div>
