--- a/templates/review_anime.html
+++ b/templates/review_anime.html
@@ -19,7 +19,7 @@
             <form action="{{ url_for('review', anime_id=anime.id) }}" method="post" class="review-form">
                 <div class="form-group">
                     <label for="review-text">Your Review:</label>
-                    <textarea id="review-text" name="review_text" rows="12" cols="300" required>{{ existing_review.review | default('')}}</textarea>
+                    <textarea id="review-text" name="review_text" rows="12" cols="300" required>{{ existing_review.review | safe | default('')}}</textarea>
                 </div>
     
                 <div class="form-group">
