--- a/static/style.css
+++ b/static/style.css
@@ -423,6 +423,13 @@ textarea, select {
     border-radius: 5px;
 }
 
+#anime_name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 /* <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet"> */
 
 
