--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -15,6 +15,7 @@
         <a href="{{ url_for('logout') }}">Logout</a>
         <label>Welcome, {{ user }}</label>
     {% endif %}
+    <label id="anime_name"></label>
     <form action="{{ url_for('homepage') }}" method="get" class="search-form" id="searchForm">
         <input type="text" id="search" name="search" placeholder="Search...">
         <div class="search-icon" onclick="submitForm()">&#128269;</div>
